<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <TableLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="8dp"
            android:layout_marginBottom="8dp">

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <TextView
                    android:id="@+id/txtResultado"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_span="4"
                    android:gravity="end"
                    android:textColor="#FFFFFF"
                    android:textSize="24sp"/>
            </TableRow>

            <TableRow
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">

                <Button
                    android:id="@+id/btnSiete"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@drawable/custom_button"
                    android:text="@string/strSiete"
                    android:textSize="24sp" />

                <Button
                    android:id="@+id/btnOcho"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@drawable/custom_button"
                    android:text="@string/strOcho"
                    android:textSize="24sp" />

                <Button
                    android:id="@+id/btnNueve"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@drawable/custom_button"
                    android:text="@string/strNueve"
                    android:textSize="24sp" />

                <Button
                    android:id="@+id/btnClear"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@drawable/button_op"
                    android:backgroundTint="#FF0000"
                    android:backgroundTintMode="src_in"
                    android:text="@string/strClear"
                    android:textColor="#000000"
                    android:textSize="24sp"
                    app:cornerRadius="999dp" />

            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <Button
                    android:id="@+id/btnCuatro"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@drawable/custom_button"
                    android:text="@string/strCuatro"
                    android:textSize="24sp" />

                <Button
                    android:id="@+id/btnCinco"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@drawable/custom_button"
                    android:text="@string/strCinco"
                    android:textSize="24sp" />

                <Button
                    android:id="@+id/btnSeis"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@drawable/custom_button"
                    android:text="@string/strSeis"
                    android:textSize="24sp" />

                <Button
                    android:id="@+id/btnMenos"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@drawable/button_op"
                    android:backgroundTint="#00FFFF"
                    android:text="@string/strMenos"
                    android:textColor="#000000"
                    android:textSize="24sp" />
            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <Button
                    android:id="@+id/btnUno"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@drawable/custom_button"
                    android:text="@string/strUno"
                    android:textSize="24sp" />

                <Button
                    android:id="@+id/btnDos"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@drawable/custom_button"
                    android:text="@string/strDos"
                    android:textSize="24sp" />

                <Button
                    android:id="@+id/btnTres"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@drawable/custom_button"
                    android:text="@string/strTres"
                    android:textSize="24sp" />

                <Button
                    android:id="@+id/btnPor"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@drawable/button_op"
                    android:backgroundTint="@color/cyan"
                    android:text="@string/strPor"
                    android:textColor="#000000"
                    android:textSize="24sp" />
            </TableRow>

            <TableRow
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">

                <Button
                    android:id="@+id/btnCero"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_span="1"
                    android:background="@drawable/custom_button"
                    android:text="@string/strCero"
                    android:textSize="24sp" />

                <Button
                    android:id="@+id/btnIgual"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@drawable/button_op"
                    android:backgroundTint="@color/white"
                    android:text="@string/strIgual"
                    android:textColor="#000000"
                    android:textSize="24sp" />

                <Button
                    android:id="@+id/btnEntre"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@drawable/button_op"
                    android:backgroundTint="@color/cyan"
                    android:text="@string/strEntre"
                    android:textColor="#000000"
                    android:textSize="24sp" />

                <Button
                    android:id="@+id/btnMas"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@drawable/button_op"
                    android:backgroundTint="#00FFFF"
                    android:text="@string/strMas"
                    android:textColor="#000000"
                    android:textSize="24sp" />

            </TableRow>
        </TableLayout>
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>